--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -46,7 +46,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-1.3.7.jar}:\
-    ${file.reference.jasypt-1.9.2.jar}
+    ${file.reference.jasypt-1.9.2.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
