--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-fileupload-1.3.1.jar=commons-fileupload-1.3.1.jar
+file.reference.commons-io-2.4.jar=commons-io-2.4.jar
 file.reference.jasypt-1.9.2.jar=jasypt-1.9.2.jar
 file.reference.mariadb-java-client-1.3.7.jar=mariadb-java-client-1.3.7.jar
 includes=**
@@ -47,7 +49,9 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-1.3.7.jar}:\
     ${file.reference.jasypt-1.9.2.jar}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.commons-fileupload-1.3.1.jar}:\
+    ${file.reference.commons-io-2.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
